[package]
name = "clishe"
license = "MIT"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
repository = "https://github.com/mqnfred/clishe"
description = "Opinionated CLI (with shell) framework in rust"
categories = ["command-line-interface"]
keywords = ["cli", "shell"]
version = "0.2.1-alpha.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
# TODO: once published to crates.io, use 3.0.0 there
clap = { git = "https://github.com/clap-rs/clap/", version = "3.0.0-beta.1" }
paste = "^0"
rustyline = { version = "^5", optional = true }
shellwords = { version = "^1", optional = true }

[features]
default = ["shell"]
shell = ["rustyline", "shellwords"]
