[package]
name = "clishe"
license = "MIT"
readme = "README.md"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
repository = "https://github.com/mqnfred/clishe"
description = "Opinionated CLI (with shell) framework in rust"
categories = ["command-line-interface"]
keywords = ["cli", "shell"]
version = "0.2.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
clap = { version = "^3", features = ["derive"] }
paste = "^0"
rustyline = { version = "^5", optional = true }
shellwords = { version = "^1", optional = true }

[features]
default = ["shell"]
shell = ["rustyline", "shellwords"]
