[package]
name = "clishe"
license = "MIT"
readme = "README.md"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
repository = "https://github.com/mqnfred/clishe"
description = "Opinionated CLI (with shell) framework in rust"
categories = ["command-line-interface"]
keywords = ["cli", "shell"]
version = "0.3.0"
edition = "2018"

[features]
default = ["shell", "async"]
shell = ["rustyline", "shellwords"]
async = ["async-trait"]

[dependencies]
paste = { version = "^1" }
anyhow = { version = "^1" }
clap = { version = "^3", features = ["derive"] }
rustyline = { version = "^10", optional = true }
shellwords = { version = "^1", optional = true }
async-trait = { version = "^0.1", optional = true }

[dev-dependencies]
tokio = { version = "^1", features = ["full"] } # for the complete_async example
